--- a/style.css
+++ b/style.css
@@ -3,6 +3,19 @@ html {
 	display: flex;
 }
 
+#uiblocker {
+	background-color: transparent;
+	z-index: 1;
+	display: none;
+	position: fixed;
+	padding: 0;
+	margin: 0;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
 #gameboard {
 	padding: 5px;
 	border-radius: 7px;
