--- a/style.css
+++ b/style.css
@@ -7,7 +7,24 @@ html {
 
 header {
 	text-align: center;
-	margin-bottom: 40px;
+	margin-bottom: 25px;
+}
+
+#githubicon {
+	position: absolute;
+	top: 40px;
+	right: 10vw;
+	width: 70px;
+	height: 70px;
+	transition: 1.5s;
+	z-index: 0;
+	background-color: transparent;
+	border-radius: 30px;
+}
+
+#githubicon:hover {
+	transform: translateY(-5px);
+	background-color: azure;
 }
 
 h1 {
@@ -76,7 +93,7 @@ h1 {
 	}
 
 	50% {
-		transform: translateY(-35px);
+		transform: translateY(-25px);
 	}
 
 	100% {
@@ -85,7 +102,7 @@ h1 {
 }
 
 .gbounce {
-	animation: gbounce 2.8s;
+	animation: gbounce 2.5s;
 	animation-iteration-count: infinite;
 }
 
@@ -114,4 +131,28 @@ h1 {
 .yellowHighLight {
 	background-color: #FFFF99 !important;
 
+}
+
+footer {
+	text-align: center;
+}
+
+#updateText {
+	font-size: medium;
+}
+
+#strtOvrBtn {
+	display: inline-block;
+	width: fit-content;
+	font-size: 1.7em;
+	padding: 5px;
+	border: solid black;
+	border-radius: 7px;
+	font-family: "Orbitron", sans-serif;
+	margin-bottom: 10px;
+}
+
+#strtOvrBtn:hover {
+	background-color: gray;
+	cursor: pointer;
 }
