--- a/style.css
+++ b/style.css
@@ -110,6 +110,26 @@ h1 {
 	background-color: azure;
 }
 
+#homeIcon {
+	position: absolute;
+	top: 40px;
+	left: 5vw;
+	width: 70px;
+	height: 70px;
+	transition: 1.5s;
+	z-index: 0;
+	background-color: transparent;
+}
+
+#homeIcon:hover {
+	transform: translateY(-5px);
+}
+
+#githubicon:hover {
+	transform: translateY(-5px);
+	background-color: azure;
+}
+
 h1 {
 	font-size: 2.5rem;
 }
