--- a/style.css
+++ b/style.css
@@ -28,6 +28,10 @@ h1 {
 	border: 2px solid black;
 }
 
+.shadowBox {
+	box-shadow: 2px 4px 8px 2px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
 @media screen and (max-width: 1334px) {
 	#choice {
 		margin-top: 20px;
